--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 /* =========================
    CONFIG
 ========================= */
-const API_URL = "https://script.google.com/macros/s/AKfycbyrol_mcHXasctMJbTh3pxpM1qchu0AsFPV9L5tUvZj2vbaaptde-dCeXnZdQ7-aq2h/exec";
+const API_URL = "";
 
 /* ========================= */
 const $ = (id)=>document.getElementById(id);
