--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 /* =========================
    CONFIG
 ========================= */
-const API_URL = "";
+const API_URL = "PASTE_YOUR_NEW_WEB_APP_URL_HERE";
 
 /* ========================= */
 const $ = (id)=>document.getElementById(id);
