--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,3 @@
-test
 <!doctype html>
 <html lang="en">
 <head>
@@ -17,16 +16,17 @@ test
     --shadow:0 18px 45px rgba(2,8,23,.10);
     --radius:16px;
 
-    --accent:#2563eb;   /* blue */
-    --good:#16a34a;     /* green */
-    --warn:#d97706;     /* amber */
-    --bad:#dc2626;      /* red */
+    --accent:#2563eb;
+    --good:#16a34a;
+    --warn:#d97706;
+    --bad:#dc2626;
 
     --mono: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
     --sans: system-ui, -apple-system, Segoe UI, Roboto, Arial;
   }
 
   *{box-sizing:border-box}
+  html,body{height:100%}
   body{
     margin:0;
     font-family:var(--sans);
@@ -40,7 +40,7 @@ test
   header{
     position:sticky; top:0; z-index:50;
     backdrop-filter:saturate(180%) blur(10px);
-    background:rgba(246,248,251,.82);
+    background:rgba(246,248,251,.86);
     border-bottom:1px solid var(--border);
   }
 
@@ -54,11 +54,7 @@ test
     justify-content:space-between;
   }
 
-  .brand{
-    display:flex; gap:12px; align-items:center;
-    min-width: 280px;
-  }
-
+  .brand{display:flex; gap:12px; align-items:center; min-width:280px}
   .logo{
     width:38px; height:38px;
     border-radius:14px;
@@ -69,7 +65,6 @@ test
     overflow:hidden;
   }
   .logo img{width:100%;height:100%;object-fit:contain;display:block}
-
   .title{font-weight:900; letter-spacing:.2px; line-height:1.05;}
   .subtitle{font-size:12px; color:var(--muted); margin-top:2px;}
 
@@ -84,11 +79,7 @@ test
     white-space:nowrap;
   }
 
-  .actions{
-    display:flex; align-items:center; justify-content:flex-end;
-    gap:10px; flex-wrap:wrap;
-    flex:1;
-  }
+  .actions{display:flex; align-items:center; justify-content:flex-end; gap:10px; flex-wrap:wrap; flex:1}
 
   .input{
     border:1px solid var(--border);
@@ -133,7 +124,7 @@ test
   .card{
     border:1px solid var(--border);
     border-radius:var(--radius);
-    background:rgba(255,255,255,.82);
+    background:rgba(255,255,255,.86);
     box-shadow:var(--shadow);
     overflow:hidden;
   }
@@ -148,7 +139,6 @@ test
     border-bottom:1px solid var(--border);
     font-size:14px;
   }
-
   .body{ padding:14px; }
 
   label{
@@ -176,6 +166,7 @@ test
   .row{ display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
 
   .muted{ color:var(--muted); font-size:12px; line-height:1.45; }
+  .mini{ font-family:var(--mono); font-size:12px; color:rgba(15,23,42,.82); }
 
   .tableWrap{
     max-height: calc(100vh - 170px);
@@ -184,16 +175,10 @@ test
     background:#fff;
   }
 
-  table{
-    width:100%;
-    border-collapse:separate;
-    border-spacing:0;
-    font-size:13px;
-  }
-
+  table{ width:100%; border-collapse:separate; border-spacing:0; font-size:13px; }
   thead th{
     position:sticky; top:0; z-index:10;
-    background:rgba(255,255,255,.92);
+    background:rgba(255,255,255,.94);
     border-bottom:1px solid var(--border);
     padding:10px;
     text-align:left;
@@ -201,16 +186,12 @@ test
     color:rgba(15,23,42,.85);
     white-space:nowrap;
   }
-
   tbody td{
     border-bottom:1px solid rgba(15,23,42,.06);
     padding:10px;
     vertical-align:top;
   }
-
   tbody tr:hover td{ background:rgba(37,99,235,.05); }
-
-  .mini{ font-family:var(--mono); font-size:12px; color:rgba(15,23,42,.82); }
 
   .thumbs{ display:flex; gap:8px; flex-wrap:wrap; }
   .thumb{
@@ -226,12 +207,12 @@ test
 
   .toast{
     position:fixed; bottom:16px; right:16px;
-    background:rgba(255,255,255,.92);
+    background:rgba(255,255,255,.94);
     border:1px solid var(--border);
     padding:12px 14px;
     border-radius:16px;
     box-shadow: var(--shadow);
-    max-width: 420px;
+    max-width: 520px;
     display:none;
     z-index:80;
     white-space:pre-wrap;
@@ -296,7 +277,6 @@ test
   <div class="topbar">
     <div class="brand">
       <div class="logo">
-        <!-- optional: put your logo file beside this HTML, or change src -->
         <img src="excellence.png" alt="Tek-Pak Logo" onerror="this.style.display='none'">
       </div>
       <div>
@@ -519,60 +499,79 @@ test
 
 <script>
 /* =========================
-   CONFIG
+   CONFIG — ONLY CHANGE THIS
 ========================= */
-const API_URL = "PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE";
+const API_URL = "https://script.google.com/macros/s/AKfycbx8JaVyZqA4gXHPABTh28LtlcdxKvGLiEWQ2IBmWBLa_9ReExMURNz6kifJUX85-7DO/exec"; // must be /exec
 
 /* ========================= */
 const $ = (id)=>document.getElementById(id);
-const LS_KEY = "tekpak_admin_api_key_light_v1";
+const LS_KEY = "tekpak_admin_api_key_light_v2";
 
 let apiKey = "";
 let dropdowns = {};
 let items = [];
 let editing = null;
-
 let _saveLock = false;
 
+/* -------------------------
+   UI helpers
+------------------------- */
 function toast(msg, good=true){
   const t = $("toast");
   t.textContent = msg;
   t.style.display = "block";
   t.style.borderColor = good ? "rgba(22,163,74,.30)" : "rgba(220,38,38,.30)";
-  setTimeout(()=> t.style.display="none", 2800);
+  clearTimeout(toast._t);
+  toast._t = setTimeout(()=> t.style.display="none", 3200);
 }
-
 function setApiStatus(ok, msg){
   const el = $("apiStatus");
   el.textContent = ok ? "API: OK" : ("API: " + msg);
   el.style.borderColor = ok ? "rgba(22,163,74,.30)" : "rgba(220,38,38,.30)";
 }
 
-async function fetchWithTimeout(url, opts={}, ms=15000){
+/* -------------------------
+   Network helpers
+------------------------- */
+async function fetchWithTimeout(url, opts={}, ms=20000){
   const ctrl = new AbortController();
   const t = setTimeout(()=>ctrl.abort(), ms);
   try{
     return await fetch(url, { ...opts, signal: ctrl.signal, cache:"no-store", redirect:"follow" });
-  } finally { clearTimeout(t); }
+  } finally {
+    clearTimeout(t);
+  }
 }
 
-/* Robust API call (supports opaque fire-and-refresh saves) */
+/**
+ * API strategy:
+ * - ALWAYS include action + key in query string (works with e.parameter)
+ * - ALSO include action + key in POST body (works if server parses JSON body)
+ * This makes you compatible with basically any of the common Apps Script API patterns.
+ */
+function buildQS(action){
+  return `action=${encodeURIComponent(action)}&key=${encodeURIComponent(apiKey||"")}&t=${Date.now()}`;
+}
+
 async function api(action, payload={}, {allowOpaque=false} = {}){
+  const url = API_URL + "?" + buildQS(action);
+
+  // include action+key in body too, for scripts that read JSON body
   const bodyObj = { action, key: apiKey, ...payload };
   const body = JSON.stringify(bodyObj);
 
   try{
-    const res = await fetchWithTimeout(API_URL + "?t=" + Date.now(), {
-      method: "POST",
-      mode: "cors",
-      headers: { "Content-Type":"text/plain;charset=utf-8" },
+    const res = await fetchWithTimeout(url, {
+      method:"POST",
+      mode:"cors",
+      headers:{ "Content-Type":"text/plain;charset=utf-8" },
       body
-    }, 20000);
+    }, 25000);
 
     const text = await res.text();
     let data;
     try{ data = JSON.parse(text); }
-    catch(e){ throw new Error("Bad JSON from server:\n" + text.slice(0,220)); }
+    catch(e){ throw new Error("Bad JSON from server:\n" + text.slice(0,300)); }
 
     if(!data.ok) throw new Error(data.error || "API error");
     return data;
@@ -581,18 +580,32 @@ async function api(action, payload={}, {allowOpaque=false} = {}){
     const msg = String(err && err.message ? err.message : err);
     if(!allowOpaque) throw new Error(msg || "Failed to fetch");
 
-    // Fallback (no-cors): send + refresh to confirm
-    await fetchWithTimeout(API_URL + "?t=" + Date.now(), {
+    // fallback fire-and-refresh path
+    await fetchWithTimeout(url, {
       method:"POST",
       mode:"no-cors",
-      headers: { "Content-Type":"text/plain;charset=utf-8" },
+      headers:{ "Content-Type":"text/plain;charset=utf-8" },
       body
-    }, 20000);
+    }, 25000);
 
     return { ok:true, opaque:true };
   }
 }
 
+async function ping(){
+  const url = API_URL + "?" + buildQS("ping");
+  const r = await fetchWithTimeout(url, { method:"GET", mode:"cors" }, 15000);
+  const text = await r.text();
+  let j;
+  try{ j = JSON.parse(text); }
+  catch(e){ throw new Error("Bad JSON from ping:\n" + text.slice(0,300)); }
+  if(!j.ok) throw new Error(j.error || "Ping failed");
+  return j;
+}
+
+/* -------------------------
+   Formatting
+------------------------- */
 function escapeHtml(s){
   return String(s||"")
     .replaceAll("&","&amp;")
@@ -600,12 +613,17 @@ function escapeHtml(s){
     .replaceAll(">","&gt;")
     .replaceAll('"',"&quot;");
 }
-
 function formatMoney(v){
   const n = Number(String(v||"0").replace(/[^0-9.\-]/g,"") || 0);
   return n.toLocaleString(undefined, {style:"currency", currency:"USD"});
 }
+function numClean(s){
+  return String(s||"0").replace(/[^0-9.\-]/g,"") || "0";
+}
 
+/* -------------------------
+   Dropdowns
+------------------------- */
 function optList(select, values, includeBlank=false, blankLabel="Any"){
   select.innerHTML = "";
   if(includeBlank){
@@ -619,8 +637,6 @@ function optList(select, values, includeBlank=false, blankLabel="Any"){
     select.appendChild(o);
   });
 }
-
-/* If current value isn't in dropdown options, inject it so edit doesn't blank it */
 function setSelectValueSafe(select, value){
   const v = String(value || "").trim();
   if(!v){ select.value = ""; return; }
@@ -633,10 +649,12 @@ function setSelectValueSafe(select, value){
   select.value = v;
 }
 
+/* -------------------------
+   Rendering
+------------------------- */
 function getImgs(item){
   return [item["img1"], item["img2"], item["img3"], item["img4"], item["img5"]].filter(Boolean);
 }
-
 function thumbsFor(item){
   const urls = getImgs(item);
   if(!urls.length) return `<span class="muted">—</span>`;
@@ -647,11 +665,9 @@ function thumbsFor(item){
       </div>`).join("")}
   </div>`;
 }
-
 function buyLinksFor(item){
   const ebay = (item["ebay item url"]||"").trim();
   const pp = (item["paypal button url"]||"").trim();
-
   let out = "";
   if(ebay) out += `<button class="btn-primary btn-ghost" data-open="${escapeHtml(ebay)}">eBay</button> `;
   if(pp) out += `<button class="btn-primary btn-ghost" data-open="${escapeHtml(pp)}">PayPal</button>`;
@@ -737,24 +753,26 @@ function render(){
   });
 
   tb.querySelectorAll(".thumb").forEach(t=>{
-    t.addEventListener("click", ()=>{
-      openLightbox(t.getAttribute("data-img"));
-    });
+    t.addEventListener("click", ()=> openLightbox(t.getAttribute("data-img")));
   });
 
   tb.querySelectorAll("[data-open]").forEach(b=>{
-    b.addEventListener("click", ()=>{
-      window.open(b.getAttribute("data-open"), "_blank", "noopener");
-    });
+    b.addEventListener("click", ()=> window.open(b.getAttribute("data-open"), "_blank", "noopener"));
   });
 }
 
+/* -------------------------
+   Lightbox
+------------------------- */
 function openLightbox(url){
   $("lightboxImg").src = url;
   $("lightbox").style.display = "flex";
 }
 $("lightbox").addEventListener("click", ()=> $("lightbox").style.display="none");
 
+/* -------------------------
+   Editor
+------------------------- */
 function openEditor(item){
   const origId = item ? (item["item id"] || "") : "";
 
@@ -812,10 +830,6 @@ function openEditor(item){
 function closeEditor(){
   $("modal").style.display = "none";
   editing = null;
-}
-
-function numClean(s){
-  return String(s||"0").replace(/[^0-9.\-]/g,"") || "0";
 }
 
 function updatePreviewButtons_(){
@@ -876,8 +890,8 @@ async function saveEditor(){
       closeEditor();
       render();
     } else {
-      const saved = res.data;
-      const id = saved["item id"];
+      const saved = res.data || payload;
+      const id = saved["item id"] || payload["item id"];
       const idx = items.findIndex(x => (x["item id"]||"") === id);
       if(idx >= 0) items[idx] = saved;
       else items.unshift(saved);
@@ -894,18 +908,9 @@ async function saveEditor(){
   }
 }
 
-async function refresh(){
-  if(!apiKey){ render(); return; }
-  try{
-    const res = await api("listItems", {});
-    items = res.data || [];
-    $("lastSync").textContent = "Last sync: " + new Date().toLocaleString();
-    render();
-  }catch(err){
-    toast(err.message, false);
-  }
-}
-
+/* -------------------------
+   Data loading
+------------------------- */
 async function loadDropdowns(){
   if(!apiKey) return;
   const res = await api("getDropdowns", {});
@@ -924,6 +929,18 @@ async function loadDropdowns(){
   optList($("e_condition"), dropdowns.condition || [], false);
 }
 
+async function refresh(){
+  if(!apiKey){ render(); return; }
+  try{
+    const res = await api("listItems", {});
+    items = res.data || [];
+    $("lastSync").textContent = "Last sync: " + new Date().toLocaleString();
+    render();
+  }catch(err){
+    toast(err.message || "Refresh failed", false);
+  }
+}
+
 async function connect(){
   apiKey = $("apiKey").value.trim();
   if(!apiKey){
@@ -933,21 +950,21 @@ async function connect(){
   localStorage.setItem(LS_KEY, apiKey);
 
   try{
-    const r = await fetchWithTimeout(API_URL + "?action=ping&t=" + Date.now(), { method:"GET", mode:"cors" }, 15000);
-    const j = await r.json();
-    if(!j.ok) throw new Error(j.error || "Ping failed");
-    setApiStatus(true, "OK");
+    const j = await ping();
+    setApiStatus(true, j.version ? ("OK • " + j.version) : "OK");
 
     await loadDropdowns();
     await refresh();
     toast("Connected ✓");
   }catch(err){
     setApiStatus(false, "FAIL");
-    toast(err.message, false);
+    toast(err.message || "Connect failed", false);
   }
 }
 
-/* Wire UI */
+/* -------------------------
+   Wire UI
+------------------------- */
 $("btnConnect").addEventListener("click", connect);
 $("btnRefresh").addEventListener("click", refresh);
 $("btnNew").addEventListener("click", ()=> openEditor(null));
@@ -1024,13 +1041,20 @@ $("btnExport").addEventListener("click", ()=>{
   $("apiKey").value = saved;
   apiKey = saved.trim();
 
-  fetch(API_URL + "?action=ping&t=" + Date.now())
-    .then(r=>r.json())
-    .then(j=> setApiStatus(!!j.ok, j.ok ? "OK" : "FAIL"))
-    .catch(()=> setApiStatus(false, "FAIL"));
+  // status indicator (does not block UI)
+  if(API_URL && !API_URL.includes("PASTE_YOUR")){
+    ping().then(j=>{
+      setApiStatus(true, j.version ? ("OK • " + j.version) : "OK");
+    }).catch(()=>{
+      setApiStatus(false, "FAIL");
+    });
+  } else {
+    setApiStatus(false, "SET URL");
+  }
 
   render();
 })();
 </script>
+
 </body>
 </html>
